--- a/portfolios.html
+++ b/portfolios.html
@@ -256,21 +256,17 @@
             </li>
           </ul>
         </div>
-
-        <!-- <p>
-          <b>подпишитесь на рассылку</b>
-        </p> -->
-
-        <!-- <div>
-          <ul>
-            <li>
-              
-            </li>
-            <li>
-              <a href="#" class="button-studio">Подписаться</a>
-            </li>
-          </ul>
-        </div> -->
+        <form action="#">
+          <!-- <b>ПОДПИШИТЕСЬ НА РАССЫЛКУ</b> -->
+          <label class="footer-imput" for="spam">ПОДПИШИТЕСЬ НА РАССЫЛКУ</label>
+          <input class="forma" type="mail" name="spam" id="spam" autocomplete="email" placeholder="E-mail" />
+          <button type="submit" class="button-studio">
+            Подписаться
+            <svg class="telegram-icon" width="24px" height="24px">
+              <use href="./img/sprite_2.svg#telega"></use>
+            </svg>
+          </button>
+        </form>
       </footer>
     </div>
   </body>
